add exlude result and doctype

--- a/index.xhtml
+++ b/index.xhtml
@@ -1,4 +1,5 @@
-<html xml:lang="pl" lang="pl" xmlns:pkp="www.pkp.pl" xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xml:lang="pl" lang="pl" xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <META http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>
@@ -124,7 +125,27 @@
 </td>
 </tr>
 <tr>
-<td>6</td><td>POLREGIO</td><td>Maria</td><td>10:35:00</td><td>Piotrk&oacute;w</td><td>12:35:00</td><td>Ł&oacute;dź</td><td>13km</td><td>
+<td>6</td><td>Twoje Linie Kolejowe</td><td>Krystyna</td><td>19:35:00</td><td>Ł&oacute;dź</td><td>22:35:00</td><td>Piotrk&oacute;w</td><td>53km</td><td>
+<ul>
+<li>
+                      typ:
+                        student
+
+                      cena:
+                        24.02
+                      zł
+                    </li>
+</ul>
+</td><td>
+<ul>
+<li>Ł&oacute;dź</li>
+<li>Piotrk&oacute;w</li>
+<li>Katowice</li>
+</ul>
+</td>
+</tr>
+<tr>
+<td>7</td><td>POLREGIO</td><td>Maria</td><td>10:35:00</td><td>Piotrk&oacute;w</td><td>12:35:00</td><td>Ł&oacute;dź</td><td>13km</td><td>
 <ul>
 <li>
                       typ:
@@ -143,7 +164,7 @@
 </td>
 </tr>
 <tr>
-<td>7</td><td>POLREGIO</td><td>Krzysztof</td><td>08:45:00</td><td>Ł&oacute;dź</td><td>11:35:00</td><td>Pabianice</td><td>10km</td><td>
+<td>8</td><td>POLREGIO</td><td>Krzysztof</td><td>08:45:00</td><td>Ł&oacute;dź</td><td>11:35:00</td><td>Pabianice</td><td>10km</td><td>
 <ul>
 <li>
                       typ:
@@ -162,7 +183,7 @@
 </td>
 </tr>
 <tr>
-<td>8</td><td>POLREGIO</td><td>TGV</td><td>08:35:00</td><td>Warszawa</td><td>09:35:00</td><td>Ł&oacute;dź</td><td>130km</td><td>
+<td>9</td><td>POLREGIO</td><td>TGV</td><td>08:35:00</td><td>Warszawa</td><td>09:35:00</td><td>Ł&oacute;dź</td><td>130km</td><td>
 <ul>
 <li>
                       typ:
@@ -181,7 +202,26 @@
 </td>
 </tr>
 <tr>
-<td>9</td><td>InterCity</td><td>Stefan</td><td>11:35:00</td><td>Pabianice</td><td>14:35:00</td><td>Piotrk&oacute;w</td><td>53km</td><td>
+<td>10</td><td>InterCity</td><td>Stefan</td><td>11:35:00</td><td>Piotrk&oacute;w</td><td>12:35:00</td><td>Ł&oacute;dź</td><td>53km</td><td>
+<ul>
+<li>
+                      typ:
+                        student
+
+                      cena:
+                        11.02
+                      zł
+                    </li>
+</ul>
+</td><td>
+<ul>
+<li>Piotrk&oacute;w</li>
+<li>Ł&oacute;dź</li>
+</ul>
+</td>
+</tr>
+<tr>
+<td>11</td><td>InterCity</td><td>Stefan</td><td>11:35:00</td><td>Pabianice</td><td>14:35:00</td><td>Piotrk&oacute;w</td><td>53km</td><td>
 <ul>
 <li>
                       typ:
@@ -208,7 +248,46 @@
 </td>
 </tr>
 <tr>
-<td>10</td><td>Express InterCity Premium</td><td>Pendolino</td><td>14:15:00</td><td>Koluszki</td><td>18:35:00</td><td>Warszawa</td><td>153km</td><td>
+<td>12</td><td>InterCity</td><td>Grzegorz</td><td>11:35:00</td><td>Katowice</td><td>12:35:00</td><td>Ł&oacute;dź</td><td>53km</td><td>
+<ul>
+<li>
+                      typ:
+                        student
+
+                      cena:
+                        14.02
+                      zł
+                    </li>
+</ul>
+</td><td>
+<ul>
+<li>Piotrk&oacute;w</li>
+<li>Ł&oacute;dź</li>
+</ul>
+</td>
+</tr>
+<tr>
+<td>13</td><td>InterCity</td><td>Grzegorz</td><td>11:35:00</td><td>Ł&oacute;dź</td><td>12:35:00</td><td>Piotrk&oacute;w</td><td>53km</td><td>
+<ul>
+<li>
+                      typ:
+                        student
+
+                      cena:
+                        14.02
+                      zł
+                    </li>
+</ul>
+</td><td>
+<ul>
+<li>Ł&oacute;dź</li>
+<li>Piotrk&oacute;w</li>
+<li>Katowice</li>
+</ul>
+</td>
+</tr>
+<tr>
+<td>14</td><td>Express InterCity Premium</td><td>Pendolino</td><td>14:15:00</td><td>Koluszki</td><td>18:35:00</td><td>Warszawa</td><td>153km</td><td>
 <ul>
 <li>
                       typ:
@@ -235,7 +314,7 @@
 </td>
 </tr>
 <tr>
-<td>11</td><td>Express InterCity Premium</td><td>A5</td><td>15:45:00</td><td>Katowice</td><td>16:00:00</td><td>Pabianice</td><td>90km</td><td>
+<td>15</td><td>Express InterCity Premium</td><td>A5</td><td>15:45:00</td><td>Katowice</td><td>16:00:00</td><td>Pabianice</td><td>90km</td><td>
 <ul>
 <li>
                       typ:
@@ -254,7 +333,7 @@
 </td>
 </tr>
 <tr>
-<td>12</td><td>Express InterCity Premium</td><td>A5</td><td>15:45:00</td><td>Warszawa</td><td>16:00:00</td><td>Pabianice</td><td>190km</td><td>
+<td>16</td><td>Express InterCity Premium</td><td>A5</td><td>15:45:00</td><td>Warszawa</td><td>16:00:00</td><td>Pabianice</td><td>190km</td><td>
 <ul>
 <li>
                       typ:
@@ -273,7 +352,7 @@
 </td>
 </tr>
 <tr>
-<td>13</td><td>Express InterCity Premium</td><td>A6</td><td>15:45:00</td><td>Katowice</td><td>16:00:00</td><td>Pabianice</td><td>90km</td><td>
+<td>17</td><td>Express InterCity Premium</td><td>A6</td><td>15:45:00</td><td>Katowice</td><td>16:00:00</td><td>Pabianice</td><td>90km</td><td>
 <ul>
 <li>
                       typ:
@@ -292,7 +371,7 @@
 </td>
 </tr>
 <tr>
-<td>14</td><td>Express InterCity Premium</td><td>A7</td><td>15:45:00</td><td>Warszawa</td><td>16:00:00</td><td>Pabianice</td><td>190km</td><td>
+<td>18</td><td>Express InterCity Premium</td><td>A7</td><td>15:45:00</td><td>Warszawa</td><td>16:00:00</td><td>Pabianice</td><td>190km</td><td>
 <ul>
 <li>
                       typ:
@@ -311,7 +390,7 @@
 </td>
 </tr>
 <tr>
-<td>15</td><td>Express InterCity Premium</td><td>A9</td><td>15:45:00</td><td>Katowice</td><td>16:00:00</td><td>Pabianice</td><td>90km</td><td>
+<td>19</td><td>Express InterCity Premium</td><td>A9</td><td>15:45:00</td><td>Katowice</td><td>16:00:00</td><td>Pabianice</td><td>90km</td><td>
 <ul>
 <li>
                       typ:
@@ -330,7 +409,7 @@
 </td>
 </tr>
 <tr>
-<td>16</td><td>Express InterCity Premium</td><td>A8</td><td>15:45:00</td><td>Warszawa</td><td>16:00:00</td><td>Pabianice</td><td>190km</td><td>
+<td>20</td><td>Express InterCity Premium</td><td>A8</td><td>15:45:00</td><td>Warszawa</td><td>16:00:00</td><td>Pabianice</td><td>190km</td><td>
 <ul>
 <li>
                       typ:
@@ -357,7 +436,7 @@
 <th>Data utworzenia</th><th>Suma cen</th><th>Ilość połączeń</th>
 </tr>
 <tr>
-<td>2019-06-14+02:00</td><td>262.40000000000003</td><td>16</td>
+<td>2019-06-14+02:00</td><td>325.48</td><td>20</td>
 </tr>
 </table>
 </div>
