--- a/index.xhtml
+++ b/index.xhtml
@@ -1,7 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xml:lang="pl" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<META http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>
       Rozkład jazdy PKP
     </title>
@@ -11,10 +10,27 @@
 <h2>Rozkład jazdy</h2>
 <table>
 <tr>
-<th>Numer</th><th>Przewoźnik</th><th>Pociąg</th><th>Czas wyjazdu</th><th>Stacja wyjazdu</th><th>Czas przyjazdu</th><th>Stacja przyjazdu</th><th>Dystans</th><th>Ceny</th><th>stacje</th>
+<th>Numer</th>
+<th>Przewoźnik</th>
+<th>Pociąg</th>
+<th>Czas wyjazdu</th>
+<th>Stacja wyjazdu</th>
+<th>Czas przyjazdu</th>
+<th>Stacja przyjazdu</th>
+<th>Dystans</th>
+<th>Ceny</th>
+<th>stacje</th>
 </tr>
 <tr>
-<td>1</td><td>Twoje Linie Kolejowe</td><td>Maglev</td><td>14:15:00</td><td>Ł&oacute;dź</td><td>14:20:00</td><td>Warszawa</td><td>73km</td><td>
+<td>1</td>
+<td>Twoje Linie Kolejowe</td>
+<td>Maglev</td>
+<td>14:15:00</td>
+<td>Łódź</td>
+<td>14:20:00</td>
+<td>Warszawa</td>
+<td>73km</td>
+<td>
 <ul>
 <li>
                       typ:
@@ -33,15 +49,24 @@
                       zł
                     </li>
 </ul>
-</td><td>
+</td>
+<td>
 <ul>
-<li>Ł&oacute;dź</li>
+<li>Łódź</li>
 <li>Warszawa</li>
 </ul>
 </td>
 </tr>
 <tr>
-<td>2</td><td>Twoje Linie Kolejowe</td><td>Maglev</td><td>13:10:00</td><td>Warszawa</td><td>14:20:00</td><td>Ł&oacute;dź</td><td>713km</td><td>
+<td>2</td>
+<td>Twoje Linie Kolejowe</td>
+<td>Maglev</td>
+<td>13:10:00</td>
+<td>Warszawa</td>
+<td>14:20:00</td>
+<td>Łódź</td>
+<td>713km</td>
+<td>
 <ul>
 <li>
                       typ:
@@ -60,15 +85,24 @@
                       zł
                     </li>
 </ul>
-</td><td>
+</td>
+<td>
 <ul>
 <li>Warszawa</li>
-<li>Ł&oacute;dź</li>
+<li>Łódź</li>
 </ul>
 </td>
 </tr>
 <tr>
-<td>3</td><td>Twoje Linie Kolejowe</td><td>T1</td><td>11:45:00</td><td>Katowice</td><td>12:00:00</td><td>Pabianice</td><td>90km</td><td>
+<td>3</td>
+<td>Twoje Linie Kolejowe</td>
+<td>T1</td>
+<td>11:45:00</td>
+<td>Katowice</td>
+<td>12:00:00</td>
+<td>Pabianice</td>
+<td>90km</td>
+<td>
 <ul>
 <li>
                       typ:
@@ -79,7 +113,8 @@
                       zł
                     </li>
 </ul>
-</td><td>
+</td>
+<td>
 <ul>
 <li>Katowice</li>
 <li>Pabianice</li>
@@ -87,7 +122,15 @@
 </td>
 </tr>
 <tr>
-<td>4</td><td>Twoje Linie Kolejowe</td><td>T1</td><td>14:45:00</td><td>Katowice</td><td>16:00:00</td><td>Pabianice</td><td>90km</td><td>
+<td>4</td>
+<td>Twoje Linie Kolejowe</td>
+<td>T1</td>
+<td>14:45:00</td>
+<td>Katowice</td>
+<td>16:00:00</td>
+<td>Pabianice</td>
+<td>90km</td>
+<td>
 <ul>
 <li>
                       typ:
@@ -98,7 +141,8 @@
                       zł
                     </li>
 </ul>
-</td><td>
+</td>
+<td>
 <ul>
 <li>Pabianice</li>
 <li>Katowice</li>
@@ -106,7 +150,15 @@
 </td>
 </tr>
 <tr>
-<td>5</td><td>Twoje Linie Kolejowe</td><td>T2</td><td>15:45:00</td><td>Katowice</td><td>16:00:00</td><td>Pabianice</td><td>90km</td><td>
+<td>5</td>
+<td>Twoje Linie Kolejowe</td>
+<td>T2</td>
+<td>15:45:00</td>
+<td>Katowice</td>
+<td>16:00:00</td>
+<td>Pabianice</td>
+<td>90km</td>
+<td>
 <ul>
 <li>
                       typ:
@@ -117,7 +169,8 @@
                       zł
                     </li>
 </ul>
-</td><td>
+</td>
+<td>
 <ul>
 <li>Pabianice</li>
 <li>Katowice</li>
@@ -125,7 +178,15 @@
 </td>
 </tr>
 <tr>
-<td>6</td><td>Twoje Linie Kolejowe</td><td>Krystyna</td><td>19:35:00</td><td>Ł&oacute;dź</td><td>22:35:00</td><td>Piotrk&oacute;w</td><td>53km</td><td>
+<td>6</td>
+<td>Twoje Linie Kolejowe</td>
+<td>Krystyna</td>
+<td>19:35:00</td>
+<td>Łódź</td>
+<td>22:35:00</td>
+<td>Piotrków</td>
+<td>53km</td>
+<td>
 <ul>
 <li>
                       typ:
@@ -136,16 +197,25 @@
                       zł
                     </li>
 </ul>
-</td><td>
+</td>
+<td>
 <ul>
-<li>Ł&oacute;dź</li>
-<li>Piotrk&oacute;w</li>
+<li>Łódź</li>
+<li>Piotrków</li>
 <li>Katowice</li>
 </ul>
 </td>
 </tr>
 <tr>
-<td>7</td><td>POLREGIO</td><td>Maria</td><td>10:35:00</td><td>Piotrk&oacute;w</td><td>12:35:00</td><td>Ł&oacute;dź</td><td>13km</td><td>
+<td>7</td>
+<td>POLREGIO</td>
+<td>Maria</td>
+<td>10:35:00</td>
+<td>Piotrków</td>
+<td>12:35:00</td>
+<td>Łódź</td>
+<td>13km</td>
+<td>
 <ul>
 <li>
                       typ:
@@ -156,15 +226,24 @@
                       zł
                     </li>
 </ul>
-</td><td>
+</td>
+<td>
 <ul>
-<li>Piotrk&oacute;w</li>
-<li>Ł&oacute;dź</li>
+<li>Piotrków</li>
+<li>Łódź</li>
 </ul>
 </td>
 </tr>
 <tr>
-<td>8</td><td>POLREGIO</td><td>Krzysztof</td><td>08:45:00</td><td>Ł&oacute;dź</td><td>11:35:00</td><td>Pabianice</td><td>10km</td><td>
+<td>8</td>
+<td>POLREGIO</td>
+<td>Krzysztof</td>
+<td>08:45:00</td>
+<td>Łódź</td>
+<td>11:35:00</td>
+<td>Pabianice</td>
+<td>10km</td>
+<td>
 <ul>
 <li>
                       typ:
@@ -175,15 +254,24 @@
                       zł
                     </li>
 </ul>
-</td><td>
+</td>
+<td>
 <ul>
-<li>Ł&oacute;dź</li>
+<li>Łódź</li>
 <li>Pabianice</li>
 </ul>
 </td>
 </tr>
 <tr>
-<td>9</td><td>POLREGIO</td><td>TGV</td><td>08:35:00</td><td>Warszawa</td><td>09:35:00</td><td>Ł&oacute;dź</td><td>130km</td><td>
+<td>9</td>
+<td>POLREGIO</td>
+<td>TGV</td>
+<td>08:35:00</td>
+<td>Warszawa</td>
+<td>09:35:00</td>
+<td>Łódź</td>
+<td>130km</td>
+<td>
 <ul>
 <li>
                       typ:
@@ -194,15 +282,24 @@
                       zł
                     </li>
 </ul>
-</td><td>
+</td>
+<td>
 <ul>
 <li>Warszawa</li>
-<li>Ł&oacute;dź</li>
+<li>Łódź</li>
 </ul>
 </td>
 </tr>
 <tr>
-<td>10</td><td>InterCity</td><td>Stefan</td><td>11:35:00</td><td>Piotrk&oacute;w</td><td>12:35:00</td><td>Ł&oacute;dź</td><td>53km</td><td>
+<td>10</td>
+<td>InterCity</td>
+<td>Stefan</td>
+<td>11:35:00</td>
+<td>Piotrków</td>
+<td>12:35:00</td>
+<td>Łódź</td>
+<td>53km</td>
+<td>
 <ul>
 <li>
                       typ:
@@ -213,15 +310,24 @@
                       zł
                     </li>
 </ul>
-</td><td>
+</td>
+<td>
 <ul>
-<li>Piotrk&oacute;w</li>
-<li>Ł&oacute;dź</li>
+<li>Piotrków</li>
+<li>Łódź</li>
 </ul>
 </td>
 </tr>
 <tr>
-<td>11</td><td>InterCity</td><td>Stefan</td><td>11:35:00</td><td>Pabianice</td><td>14:35:00</td><td>Piotrk&oacute;w</td><td>53km</td><td>
+<td>11</td>
+<td>InterCity</td>
+<td>Stefan</td>
+<td>11:35:00</td>
+<td>Pabianice</td>
+<td>14:35:00</td>
+<td>Piotrków</td>
+<td>53km</td>
+<td>
 <ul>
 <li>
                       typ:
@@ -240,15 +346,24 @@
                       zł
                     </li>
 </ul>
-</td><td>
+</td>
+<td>
 <ul>
 <li>Pabianice</li>
-<li>Piotrk&oacute;w</li>
+<li>Piotrków</li>
 </ul>
 </td>
 </tr>
 <tr>
-<td>12</td><td>InterCity</td><td>Grzegorz</td><td>11:35:00</td><td>Katowice</td><td>12:35:00</td><td>Ł&oacute;dź</td><td>53km</td><td>
+<td>12</td>
+<td>InterCity</td>
+<td>Grzegorz</td>
+<td>11:35:00</td>
+<td>Katowice</td>
+<td>12:35:00</td>
+<td>Łódź</td>
+<td>53km</td>
+<td>
 <ul>
 <li>
                       typ:
@@ -259,15 +374,24 @@
                       zł
                     </li>
 </ul>
-</td><td>
+</td>
+<td>
 <ul>
-<li>Piotrk&oacute;w</li>
-<li>Ł&oacute;dź</li>
+<li>Piotrków</li>
+<li>Łódź</li>
 </ul>
 </td>
 </tr>
 <tr>
-<td>13</td><td>InterCity</td><td>Grzegorz</td><td>11:35:00</td><td>Ł&oacute;dź</td><td>12:35:00</td><td>Piotrk&oacute;w</td><td>53km</td><td>
+<td>13</td>
+<td>InterCity</td>
+<td>Grzegorz</td>
+<td>11:35:00</td>
+<td>Łódź</td>
+<td>12:35:00</td>
+<td>Piotrków</td>
+<td>53km</td>
+<td>
 <ul>
 <li>
                       typ:
@@ -278,16 +402,25 @@
                       zł
                     </li>
 </ul>
-</td><td>
+</td>
+<td>
 <ul>
-<li>Ł&oacute;dź</li>
-<li>Piotrk&oacute;w</li>
+<li>Łódź</li>
+<li>Piotrków</li>
 <li>Katowice</li>
 </ul>
 </td>
 </tr>
 <tr>
-<td>14</td><td>Express InterCity Premium</td><td>Pendolino</td><td>14:15:00</td><td>Koluszki</td><td>18:35:00</td><td>Warszawa</td><td>153km</td><td>
+<td>14</td>
+<td>Express InterCity Premium</td>
+<td>Pendolino</td>
+<td>14:15:00</td>
+<td>Koluszki</td>
+<td>18:35:00</td>
+<td>Warszawa</td>
+<td>153km</td>
+<td>
 <ul>
 <li>
                       typ:
@@ -306,7 +439,8 @@
                       zł
                     </li>
 </ul>
-</td><td>
+</td>
+<td>
 <ul>
 <li>Koluszki</li>
 <li>Warszawa</li>
@@ -314,7 +448,15 @@
 </td>
 </tr>
 <tr>
-<td>15</td><td>Express InterCity Premium</td><td>A5</td><td>15:45:00</td><td>Katowice</td><td>16:00:00</td><td>Pabianice</td><td>90km</td><td>
+<td>15</td>
+<td>Express InterCity Premium</td>
+<td>A5</td>
+<td>15:45:00</td>
+<td>Katowice</td>
+<td>16:00:00</td>
+<td>Pabianice</td>
+<td>90km</td>
+<td>
 <ul>
 <li>
                       typ:
@@ -325,7 +467,8 @@
                       zł
                     </li>
 </ul>
-</td><td>
+</td>
+<td>
 <ul>
 <li>Katowice</li>
 <li>Pabianice</li>
@@ -333,7 +476,15 @@
 </td>
 </tr>
 <tr>
-<td>16</td><td>Express InterCity Premium</td><td>A5</td><td>15:45:00</td><td>Warszawa</td><td>16:00:00</td><td>Pabianice</td><td>190km</td><td>
+<td>16</td>
+<td>Express InterCity Premium</td>
+<td>A5</td>
+<td>15:45:00</td>
+<td>Warszawa</td>
+<td>16:00:00</td>
+<td>Pabianice</td>
+<td>190km</td>
+<td>
 <ul>
 <li>
                       typ:
@@ -344,7 +495,8 @@
                       zł
                     </li>
 </ul>
-</td><td>
+</td>
+<td>
 <ul>
 <li>Warszawa</li>
 <li>Pabianice</li>
@@ -352,7 +504,15 @@
 </td>
 </tr>
 <tr>
-<td>17</td><td>Express InterCity Premium</td><td>A6</td><td>15:45:00</td><td>Katowice</td><td>16:00:00</td><td>Pabianice</td><td>90km</td><td>
+<td>17</td>
+<td>Express InterCity Premium</td>
+<td>A6</td>
+<td>15:45:00</td>
+<td>Katowice</td>
+<td>16:00:00</td>
+<td>Pabianice</td>
+<td>90km</td>
+<td>
 <ul>
 <li>
                       typ:
@@ -363,7 +523,8 @@
                       zł
                     </li>
 </ul>
-</td><td>
+</td>
+<td>
 <ul>
 <li>Katowice</li>
 <li>Pabianice</li>
@@ -371,7 +532,15 @@
 </td>
 </tr>
 <tr>
-<td>18</td><td>Express InterCity Premium</td><td>A7</td><td>15:45:00</td><td>Warszawa</td><td>16:00:00</td><td>Pabianice</td><td>190km</td><td>
+<td>18</td>
+<td>Express InterCity Premium</td>
+<td>A7</td>
+<td>15:45:00</td>
+<td>Warszawa</td>
+<td>16:00:00</td>
+<td>Pabianice</td>
+<td>190km</td>
+<td>
 <ul>
 <li>
                       typ:
@@ -382,7 +551,8 @@
                       zł
                     </li>
 </ul>
-</td><td>
+</td>
+<td>
 <ul>
 <li>Warszawa</li>
 <li>Pabianice</li>
@@ -390,7 +560,15 @@
 </td>
 </tr>
 <tr>
-<td>19</td><td>Express InterCity Premium</td><td>A9</td><td>15:45:00</td><td>Katowice</td><td>16:00:00</td><td>Pabianice</td><td>90km</td><td>
+<td>19</td>
+<td>Express InterCity Premium</td>
+<td>A9</td>
+<td>15:45:00</td>
+<td>Katowice</td>
+<td>16:00:00</td>
+<td>Pabianice</td>
+<td>90km</td>
+<td>
 <ul>
 <li>
                       typ:
@@ -401,7 +579,8 @@
                       zł
                     </li>
 </ul>
-</td><td>
+</td>
+<td>
 <ul>
 <li>Katowice</li>
 <li>Pabianice</li>
@@ -409,7 +588,15 @@
 </td>
 </tr>
 <tr>
-<td>20</td><td>Express InterCity Premium</td><td>A8</td><td>15:45:00</td><td>Warszawa</td><td>16:00:00</td><td>Pabianice</td><td>190km</td><td>
+<td>20</td>
+<td>Express InterCity Premium</td>
+<td>A8</td>
+<td>15:45:00</td>
+<td>Warszawa</td>
+<td>16:00:00</td>
+<td>Pabianice</td>
+<td>190km</td>
+<td>
 <ul>
 <li>
                       typ:
@@ -420,7 +607,8 @@
                       zł
                     </li>
 </ul>
-</td><td>
+</td>
+<td>
 <ul>
 <li>Warszawa</li>
 <li>Pabianice</li>
@@ -433,10 +621,14 @@
 <h2>Podsumowanie</h2>
 <table style="width: 100vw">
 <tr>
-<th>Data utworzenia</th><th>Suma cen</th><th>Ilość połączeń</th>
+<th>Data utworzenia</th>
+<th>Suma cen</th>
+<th>Ilość połączeń</th>
 </tr>
 <tr>
-<td>2019-06-14+02:00</td><td>325.48</td><td>20</td>
+<td>2019-06-15+02:00</td>
+<td>325.48</td>
+<td>20</td>
 </tr>
 </table>
 </div>
